tests/sumo/meso/junction_control/tls_coordination/bad/no_control/output.sumo.meso
Loading net-file from 'net.net.xml' ... done (6ms).
Loading additional-files from 'input_additional.add.xml' ... done (0ms).
Loading done.
Simulation version v1_5_0+0174-0b4d252505 started with time: 0.00
Simulation ended at time: 92.00
Reason: All vehicles have left the simulation.
Performance: 
 Duration: 4ms
 Real time factor: 23000
 UPS: 165000.000000
Vehicles: 
 Inserted: 30
 Running: 0
 Waiting: 0
Statistics (avg):
 RouteLength: 300.00
 Speed: 13.64
 Duration: 22.00
 WaitingTime: 0.00
 TimeLoss: 0.00
 DepartDelay: 0.00

